Bug 521157 - ISBN field does not allow multiple ISBN numbers even when option checked
Summary: ISBN field does not allow multiple ISBN numbers even when option checked
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-06 21:56 UTC by Jim Sanderson
Modified: 2026-07-03 15:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Sanderson 2026-06-06 21:56:50 UTC
***
If you're not sure this is actually a bug or valid feature request, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

DESCRIPTION


STEPS TO REPRODUCE
1. Enter ISBN
2. Enter semicolon
3. Try to enter second ISBN

OBSERVED RESULT
Will not allow any further input.

EXPECTED RESULT
Ability to end second ISBN (or ISBN-10 and ISBN13) in field

SOFTWARE/OS VERSIONS
Operating System (available in the Info Center app, or by running `kinfo` in a terminal window):
KDE Plasma Version: 6.6.5
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2

ADDITIONAL INFORMATION
Tellico 4.2 using QT 6.10.2 and built against 6.10.2
Debian forky/sid
Kernel 7.0.10+deb14-amd64 (64-bit)
Comment 1 Robby Stephenson 2026-07-03 14:22:03 UTC
Git commit ccb46daab6ea03f9d570f74a142218168231fa95 by Robby Stephenson.
Committed on 03/07/2026 at 14:18.
Pushed by rstephenson into branch '4.2'.

Allow multiple ISBN values

ISBN validation is removed altogether if multiple values are allowed.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +6    -1    src/gui/linefieldwidget.cpp

https://invent.kde.org/office/tellico/-/commit/ccb46daab6ea03f9d570f74a142218168231fa95
Comment 2 Robby Stephenson 2026-07-03 15:24:39 UTC
Git commit ae7cf27be9291f92e0e9820680c473356130e8c1 by Robby Stephenson.
Committed on 03/07/2026 at 14:22.
Pushed by rstephenson into branch 'master'.

Allow multiple ISBN values

ISBN validation is removed altogether if multiple values are allowed.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +6    -1    src/gui/linefieldwidget.cpp

https://invent.kde.org/office/tellico/-/commit/ae7cf27be9291f92e0e9820680c473356130e8c1