Allow multiple ISBN values

ISBN validation is removed altogether if multiple values are allowed.

BUG: 521157
FIXED-IN: 4.2.1